cmake_minimum_required(VERSION 3.24)
project(rollo_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(rollo_cpp main.cpp)

add_executable(1.1 10week_coding_test/week0/1.1/1.1.cpp)
add_executable(1.2 10week_coding_test/week0/1.2/1.2.cpp)
add_executable(typedef 10week_coding_test/week0/1.2/typedef.cpp)
add_executable(define 10week_coding_test/week0/1.2/define.cpp)
add_executable(1.3 10week_coding_test/week0/1.3/1.3.cpp)
add_executable(q1 10week_coding_test/week1/time_complexity/Q1/q1.cpp)
add_executable(q2 10week_coding_test/week1/time_complexity/Q2/q2.cpp)
add_executable(q3 10week_coding_test/week1/time_complexity/Q3/q3.cpp)
add_executable(q4 10week_coding_test/week1/time_complexity/Q4/q4.cpp)
add_executable(q5 10week_coding_test/week1/time_complexity/Q5/q5.cpp)

add_executable(1.5 10week_coding_test/week0/1.5/1.5.cpp)
add_executable(1.6 10week_coding_test/week0/1.6/1.6.cpp)
add_executable(2557 boj/2557/2557.cpp)
add_executable(10171 boj/10171/10171.cpp)
add_executable(10869 boj/10869/10869.cpp)
add_executable(9498 boj/9498/9498.cpp)
add_executable(prefix_sum 10week_coding_test/week1/prefix_sum/prefix_sum.cpp)