cmake_minimum_required(VERSION 3.24)
project(rollo_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(rollo_cpp main.cpp)

add_executable(2557 boj/2557/2557.cpp)
add_executable(10171 boj/10171/10171.cpp)
add_executable(10869 boj/10869/10869.cpp)
add_executable(9498 boj/9498/9498.cpp)
add_executable(2309 boj/2309/2309.cpp)
add_executable(2309_ boj/2309/_2309.cpp)
add_executable(10808 boj/10808/10808.cpp)
add_executable(2979 boj/2979/2979.cpp)
add_executable(10988 boj/10988/10988.cpp)
add_executable(1159 boj/1159/1159.cpp)
add_executable(11655 boj/11655/11655.cpp)
add_executable(9996 boj/9996/9996.cpp)
add_executable(2559 boj/2559/2559.cpp)